CompactSequence.from